GB3-867: show öreb and owner buttons always next to each other and show tooltip if truncated, fix padding for addiotional info

--- a/src/app/map/components/feature-info-overlay/feature-info-general-information/feature-info-general-information.component.scss
+++ b/src/app/map/components/feature-info-overlay/feature-info-general-information/feature-info-general-information.component.scss
@@ -43,7 +43,7 @@ span {
   }
 
   .general-information__additional-content {
-    padding-top: 16px;
+    padding-left: 47px;
 
     .general-information__additional-content__crs,
     .general-information__additional-content__links,
@@ -70,7 +70,6 @@ span {
   display: flex;
   gap: 8px;
   flex-direction: row;
-  flex-wrap: wrap;
   row-gap: 0;
 
   .external-links__button {
